--- a/package.json
+++ b/package.json
@@ -1,18 +1,33 @@
 {
   "name": "nexus_ui_draft_03",
-  "version": "0.1.0",
-  "description": "Nexus UI Project - Execution Roadmap",
+  "version": "0.2.0",
+  "description": "Nexus UI Project - Execution Roadmap with Vue 3 Composables",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "build": "tsc",
     "type-check": "tsc --noEmit",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
     "test:types": "tsc --noEmit && node dist/tests/types.validation.test.js"
   },
-  "keywords": ["nexus", "ui", "typescript"],
+  "keywords": ["nexus", "ui", "typescript", "vue3", "composables"],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "vue": "^3.4.21"
+  },
   "devDependencies": {
+    "@types/node": "^20.10.0",
+    "@vitest/ui": "^1.3.1",
+    "@vue/test-utils": "^2.4.4",
+    "happy-dom": "^13.6.2",
+    "msw": "^2.2.1",
     "typescript": "^5.3.0",
-    "@types/node": "^20.10.0"
+    "vite": "^5.1.5",
+    "vitest": "^1.3.1",
+    "@vitejs/plugin-vue": "^5.0.4"
   }
 }
